basic styling and SPA setup

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lexend:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&family=Roboto+Mono&family=Space+Grotesk:wght@700&display=swap"
       rel="stylesheet" />
     <!-- scripts -->
     <script defer src="./app.js"></script>
@@ -18,20 +18,22 @@
   </head>
   <body>
     <div class="wrapper">
-      <div class="container">
-        <main class="main-container"></main>
+      <div class="background">
+        <div class="container">
+          <header class="header-home">
+            <section class="profile">
+              <img src="./images/mprofile.png" alt="Profile Picture" />
+            </section>
+            <section>
+              <h4 class="f2">Welcome back,</h4>
+              <h1 class="f1">Luke Janssen</h1>
+            </section>
+          </header>
+
+          <nav></nav>
+          <main class="main-container"></main>
+        </div>
       </div>
     </div>
   </body>
 </html>
-
-<!-- <header class="header-home">
-  <div class="profile">
-    <img src="./images/mprofile.png" alt="Profile Picture" />
-  </div>
-  <h4>Welcome Back</h4>
-  <h1>${injectName}</h1>
-  <div class="buttons">
-    <button class="dark light"></button>
-  </div>
-</header> -->
