remove old fonts and styles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&family=Roboto+Mono&family=Space+Grotesk:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&family=Roboto+Mono&display=swap"
       rel="stylesheet" />
     <!-- scripts -->
     <script defer src="./app.js"></script>
@@ -29,8 +29,13 @@
               <h1 class="f1">Luke Janssen</h1>
             </section>
           </header>
-
-          <nav></nav>
+          <nav>
+            <ul>
+              <li>Library</li>
+              <li>Stats</li>
+              <li>About</li>
+            </ul>
+          </nav>
           <main class="main-container"></main>
         </div>
       </div>
