implemented text permutation on nav

--- a/index.html
+++ b/index.html
@@ -31,32 +31,23 @@
           </header>
           <nav>
             <ul>
-              <li>
-                <span
-                  id="permutable1"
-                  onmouseover="permute('permutable1')"
-                  onmouseleave="unpermute('Cache','permutable1')"
-                  onclick="unpermute('Cache','permutable1')"
-                  >Cache</span
-                >
+              <li
+                onmouseenter="permute('permutable1')"
+                onmouseleave="unpermute('Cache','permutable1')"
+                onclick="unpermute('Cache','permutable1')">
+                <span id="permutable1">Cache</span>
               </li>
-              <li>
-                <span
-                  id="permutable2"
-                  onmouseover="permute('permutable2')"
-                  onmouseleave="unpermute('Stats','permutable2')"
-                  onclick="unpermute('Stats','permutable2')"
-                  >Stats</span
-                >
+              <li
+                onmouseenter="permute('permutable2')"
+                onmouseleave="unpermute('Stats','permutable2')"
+                onclick="unpermute('Stats','permutable2')">
+                <span id="permutable2">Stats</span>
               </li>
-              <li>
-                <span
-                  id="permutable3"
-                  onmouseover="permute('permutable3')"
-                  onmouseleave="unpermute('About','permutable3')"
-                  onclick="unpermute('About','permutable3')"
-                  >About</span
-                >
+              <li
+                onmouseenter="permute('permutable3')"
+                onmouseleave="unpermute('About','permutable3')"
+                onclick="unpermute('About','permutable3')">
+                <span id="permutable3">About</span>
               </li>
             </ul>
           </nav>
