--- a/index.html
+++ b/index.html
@@ -32,21 +32,27 @@
           <nav>
             <ul>
               <li
-                onmouseenter="permute('permutable1')"
-                onmouseleave="unpermute('Cache','permutable1')"
-                onclick="unpermute('Cache','permutable1')">
-                <span id="permutable1">Cache</span>
+                onmouseenter="startPermutationAnimation('permutable1')"
+                onmouseleave="stopPermutationAnimation('Cache','permutable1')"
+                onclick="stopPermutationAnimation('Cache','permutable1')">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                  <path
+                    d="M96 0C43 0 0 43 0 96V416c0 53 43 96 96 96H384h32c17.7 0 32-14.3 32-32s-14.3-32-32-32V384c17.7 0 32-14.3 32-32V32c0-17.7-14.3-32-32-32H384 96zm0 384H352v64H96c-17.7 0-32-14.3-32-32s14.3-32 32-32zm32-240c0-8.8 7.2-16 16-16H336c8.8 0 16 7.2 16 16s-7.2 16-16 16H144c-8.8 0-16-7.2-16-16zm16 48H336c8.8 0 16 7.2 16 16s-7.2 16-16 16H144c-8.8 0-16-7.2-16-16s7.2-16 16-16z" /></svg
+                ><span id="permutable1">Cache</span>
               </li>
               <li
-                onmouseenter="permute('permutable2')"
-                onmouseleave="unpermute('Stats','permutable2')"
-                onclick="unpermute('Stats','permutable2')">
-                <span id="permutable2">Stats</span>
+                onmouseenter="startPermutationAnimation('permutable2')"
+                onmouseleave="stopPermutationAnimation('Stats','permutable2')"
+                onclick="stopPermutationAnimation('Stats','permutable2')">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                  <path
+                    d="M448 80v48c0 44.2-100.3 80-224 80S0 172.2 0 128V80C0 35.8 100.3 0 224 0s224 35.8 224 80zm-54.8 134.7c20.8-7.4 39.9-16.9 54.8-28.6V288c0 44.2-100.3 80-224 80S0 332.2 0 288V186.1c14.9 11.8 34 21.2 54.8 28.6C99.7 230.7 159.5 240 224 240s124.3-9.3 169.2-25.3zM0 346.1c14.9 11.8 34 21.2 54.8 28.6C99.7 390.7 159.5 400 224 400s124.3-9.3 169.2-25.3c20.8-7.4 39.9-16.9 54.8-28.6V432c0 44.2-100.3 80-224 80S0 476.2 0 432v-85.9z" /></svg
+                ><span id="permutable2">Stats</span>
               </li>
               <li
-                onmouseenter="permute('permutable3')"
-                onmouseleave="unpermute('About','permutable3')"
-                onclick="unpermute('About','permutable3')">
+                onmouseenter="startPermutationAnimation('permutable3')"
+                onmouseleave="stopPermutationAnimation('About','permutable3')"
+                onclick="stopPermutationAnimation('About','permutable3')">
                 <span id="permutable3">About</span>
               </li>
             </ul>
