--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
                     d="M448 80v48c0 44.2-100.3 80-224 80S0 172.2 0 128V80C0 35.8 100.3 0 224 0s224 35.8 224 80zm-54.8 134.7c20.8-7.4 39.9-16.9 54.8-28.6V288c0 44.2-100.3 80-224 80S0 332.2 0 288V186.1c14.9 11.8 34 21.2 54.8 28.6C99.7 230.7 159.5 240 224 240s124.3-9.3 169.2-25.3zM0 346.1c14.9 11.8 34 21.2 54.8 28.6C99.7 390.7 159.5 400 224 400s124.3-9.3 169.2-25.3c20.8-7.4 39.9-16.9 54.8-28.6V432c0 44.2-100.3 80-224 80S0 476.2 0 432v-85.9z" /></svg
                 ><span id="permutable2">Stats</span>
               </li>
-              <li
-                onmouseenter="startPermutationAnimation('permutable3')"
-                onmouseleave="stopPermutationAnimation('About','permutable3')"
-                onclick="stopPermutationAnimation('About','permutable3')">
-                <span id="permutable3">About</span>
-              </li>
             </ul>
           </nav>
+          <section class="wave-text">
+            <video autoplay loop>
+              <source src="./images/text-wave.mp4" type="video/mp4" />
+              Your browser does not support the video tag.
+            </video>
+          </section>
           <main class="main-container"></main>
         </div>
       </div>
