--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </ul>
           </nav>
           <section class="wave-text">
-            <video autoplay loop>
+            <video autoplay loop muted>
               <source src="./images/text-wave.mp4" type="video/mp4" />
               Your browser does not support the video tag.
             </video>
