improved recent message on no items

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <section class="recent">
             <h2 class="f1">Recent's</h2>
             <p class="f2">
-              no items are in your cache. Add items to view your recent's.
+              No items are in your cache. Add items to view recent.
             </p>
             <img src="./images/no-items.svg" alt="no items added" />
             <button
