setup page toggle

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </svg>
           </button>
           <div class="main-container">
-            <header class="header-home">
+            <header class="header-home" id="home">
               <section class="profile">
                 <img src="./images/mprofile.png" alt="Profile Picture" />
               </section>
@@ -37,7 +37,7 @@
               </section>
             </header>
           </div>
-          <section class="navigation">
+          <section class="navigation" id="home">
             <nav>
               <ul>
                 <li
@@ -65,7 +65,7 @@
               Your browser does not support the video tag.
             </video>
           </section>
-          <section class="recent">
+          <section class="recent" id="home">
             <h2 class="f1">Recent's</h2>
             <p class="f2">
               No items are in your cache. Add items to view recent.
