added myCache page

--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
               </svg>
               <button class="f2" type="button">select</button>
             </div>
-            <section class="shelves"></section>
+            <section class="books">
+              <div class="book f2"></div>
+              <div class="book f2"></div>
+            </section>
           </section>
           <section class="navigation myHome">
             <nav>
