working page toggle

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
               </svg>
               <button class="f2" type="button">select</button>
             </div>
-            <section class="books"></section>
+            <section class="books no-items"></section>
+            <p class="f2">No items are in your cache</p>
+            <img src="./images/no-items.svg" alt="no items added" />
           </section>
           <section class="navigation">
             <nav>
@@ -82,7 +84,7 @@
           </section>
           <section class="myStats">
             <h2 class="f1">myStats</h2>
-            <section class="no-items">
+            <section>
               <p class="f2">No items are in your cache</p>
               <img src="./images/no-items.svg" alt="no items added" />
             </section>
