--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
           </div>
           <form class="form-input form-off" id="add-book-form">
             <label class="f2" for="ftitle">Title:</label> <br />
-            <input type="text" id="ftitle" name="ftitle" /><br />
+            <input required type="text" id="ftitle" name="ftitle" /><br />
 
             <label class="f2" for="author">Author:</label> <br />
-            <input type="text" id="author" name="author" /><br />
+            <input required type="text" id="author" name="author" /><br />
 
             <label class="f2" for="pages">Pages:</label> <br />
-            <input type="number" id="pages" name="pages" /><br />
+            <input required type="number" id="pages" name="pages" /><br />
 
             <label class="f2" for="isRead">Current Page:</label>
-            <input type="number" id="isRead" name="isRead" /><br />
+            <input required type="number" id="isRead" name="isRead" /><br />
 
             <button type="submit">Add Book</button>
           </form>
