adjust input checkbox on safari

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
             <label class="f2" for="isRead">Finished:</label>
             <input
+              class="inputcheck"
               value="true"
               type="checkbox"
               id="isRead"
