--- a/index.html
+++ b/index.html
@@ -6,127 +6,11 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <!-- stylesheets -->
-    <link rel="stylesheet" href="style.css" />
     <!-- favicon -->
     <link rel="shortcut icon" href="./images/favicon.png" type="png" />
-    <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&family=Roboto+Mono&display=swap"
-      rel="stylesheet" />
     <!-- scripts -->
     <script defer src="./app.js"></script>
     <title>Library</title>
   </head>
-  <body>
-    <div class="wrapper">
-      <div class="background">
-        <main class="container">
-          <button type="button" class="settings">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-              <path
-                d="M481.9 166.6c3.2 8.7 .5 18.4-6.4 24.6l-30.9 28.1c-7.7 7.1-11.4 17.5-10.9 27.9c.1 2.9 .2 5.8 .2 8.8s-.1 5.9-.2 8.8c-.5 10.5 3.1 20.9 10.9 27.9l30.9 28.1c6.9 6.2 9.6 15.9 6.4 24.6c-4.4 11.9-9.7 23.3-15.8 34.3l-4.7 8.1c-6.6 11-14 21.4-22.1 31.2c-5.9 7.2-15.7 9.6-24.5 6.8l-39.7-12.6c-10-3.2-20.8-1.1-29.7 4.6c-4.9 3.1-9.9 6.1-15.1 8.7c-9.3 4.8-16.5 13.2-18.8 23.4l-8.9 40.7c-2 9.1-9 16.3-18.2 17.8c-13.8 2.3-28 3.5-42.5 3.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-8.9-40.7c-2.2-10.2-9.5-18.6-18.8-23.4c-5.2-2.7-10.2-5.6-15.1-8.7c-8.8-5.7-19.7-7.8-29.7-4.6L69.1 425.9c-8.8 2.8-18.6 .3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4 6.4-24.6l30.9-28.1c7.7-7.1 11.4-17.5 10.9-27.9c-.1-2.9-.2-5.8-.2-8.8s.1-5.9 .2-8.8c.5-10.5-3.1-20.9-10.9-27.9L8.4 191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9 9.7-23.3 15.8-34.3l4.7-8.1c6.6-11 14-21.4 22.1-31.2c5.9-7.2 15.7-9.6 24.5-6.8l39.7 12.6c10 3.2 20.8 1.1 29.7-4.6c4.9-3.1 9.9-6.1 15.1-8.7c9.3-4.8 16.5-13.2 18.8-23.4l8.9-40.7c2-9.1 9-16.3 18.2-17.8C213.3 1.2 227.5 0 242 0s28.7 1.2 42.5 3.5c9.2 1.5 16.2 8.7 18.2 17.8l8.9 40.7c2.2 10.2 9.4 18.6 18.8 23.4c5.2 2.7 10.2 5.6 15.1 8.7c8.8 5.7 19.7 7.7 29.7 4.6l39.7-12.6c8.8-2.8 18.6-.3 24.5 6.8c8.1 9.8 15.5 20.2 22.1 31.2l4.7 8.1c6.1 11 11.4 22.4 15.8 34.3zM242 336a80 80 0 1 0 0-160 80 80 0 1 0 0 160z" />
-            </svg>
-          </button>
-          <h3 class="title f1" id="title"></h3>
-          <button type="button" class="back cache-off">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
-              <path
-                d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z" />
-            </svg>
-          </button>
-          <div class="main-container">
-            <header class="header-home">
-              <section class="profile">
-                <img src="./images/mprofile.png" alt="Profile Picture" />
-              </section>
-              <section>
-                <h4 class="f2">Welcome back,</h4>
-                <h1 class="f1">Luke Janssen</h1>
-              </section>
-            </header>
-          </div>
-          <form class="form-input form-off" id="add-book-form">
-            <label class="f2" for="ftitle">Title:</label> <br />
-            <input required type="text" id="ftitle" name="ftitle" /><br />
-
-            <label class="f2" for="author">Author:</label> <br />
-            <input required type="text" id="author" name="author" /><br />
-
-            <label class="f2" for="pages">Pages:</label> <br />
-            <input
-              required
-              type="number"
-              id="pages"
-              name="pages"
-              pattern="[0-9]*"
-              inputmode="numeric" /><br />
-
-            <label class="f2" for="isRead">Finished:</label>
-            <input
-              class="inputcheck"
-              value="true"
-              type="checkbox"
-              id="isRead"
-              name="isRead" /><br />
-
-            <button type="submit">Add Book</button>
-          </form>
-          <section class="cache cache-off">
-            <div class="controls">
-              <button class="add-items" type="button" id="add">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                  <path
-                    d="M240 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H32c-17.7 0-32 14.3-32 32s14.3 32 32 32H176V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H384c17.7 0 32-14.3 32-32s-14.3-32-32-32H240V80z" />
-                </svg>
-              </button>
-              <button type="button" id="delete">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                  <path
-                    d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" />
-                </svg>
-              </button>
-              <button class="f2 select" type="button">
-                <span id="permutable2">Select</span>
-              </button>
-            </div>
-            <section class="books no-items"></section>
-            <section class="notice">
-              <p class="f2">No items are in your cache</p>
-              <img src="./images/no-items.svg" alt="no items added" />
-            </section>
-          </section>
-          <section class="navigation">
-            <nav>
-              <ul>
-                <li
-                  class="switch-page"
-                  onmouseenter="startPermutationAnimation('permutable1')"
-                  onmouseleave="stopPermutationAnimation('Cache','permutable1')"
-                  onclick="stopPermutationAnimation('Cache','permutable1')">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                    <path
-                      d="M96 0C43 0 0 43 0 96V416c0 53 43 96 96 96H384h32c17.7 0 32-14.3 32-32s-14.3-32-32-32V384c17.7 0 32-14.3 32-32V32c0-17.7-14.3-32-32-32H384 96zm0 384H352v64H96c-17.7 0-32-14.3-32-32s14.3-32 32-32zm32-240c0-8.8 7.2-16 16-16H336c8.8 0 16 7.2 16 16s-7.2 16-16 16H144c-8.8 0-16-7.2-16-16zm16 48H336c8.8 0 16 7.2 16 16s-7.2 16-16 16H144c-8.8 0-16-7.2-16-16s7.2-16 16-16z" /></svg
-                  ><span id="permutable1">Cache</span>
-                </li>
-              </ul>
-            </nav>
-            <video autoplay loop muted playsinline poster>
-              <source src="./images/text-wave.mp4" type="video/mp4" />
-              Your browser does not support the video tag.
-            </video>
-          </section>
-          <section class="myStats">
-            <h2 class="f1">myStats</h2>
-            <section class="statistics">
-              <p class="f2">No items are in your cache</p>
-              <img src="./images/no-items.svg" alt="no items added" />
-            </section>
-          </section>
-        </main>
-      </div>
-    </div>
-  </body>
+  <body></body>
 </html>
