Add boilerplate html for console based library

--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@
     <!-- scripts -->
     <script defer src="./app.js"></script>
     <title>Library</title>
+    <style>
+      body {
+        font-family: monospace;
+        font-size: 1rem;
+        background-color: rgb(44, 44, 44);
+        color: azure;
+      }
+      p {
+        font-size: 0.85rem;
+        color: inherit;
+      }
+      em {
+        color: rgb(172, 137, 235);
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <h1>Library</h1>
+    <p><em>THE ODIN PROJECT</em></p>
+    <p>inspect this page to use myLib from dev tools console</p>
+  </body>
 </html>
