--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="shortcut icon" href="./images/favicon.png" type="png" />
     <!-- scripts -->
     <script defer src="./app.js"></script>
-    <title>Library</title>
     <style>
       body {
         font-family: monospace;
@@ -26,9 +25,10 @@
         color: rgb(172, 137, 235);
       }
     </style>
+    <title>myLib</title>
   </head>
   <body>
-    <h1>Library</h1>
+    <h1>myLib</h1>
     <p><em>THE ODIN PROJECT</em></p>
     <p>inspect this page to use myLib from dev tools console</p>
   </body>
