Add library intro banner to console logs

--- a/index.html
+++ b/index.html
@@ -31,5 +31,23 @@
     <h1>myLib</h1>
     <p><em>THE ODIN PROJECT</em></p>
     <p>inspect this page to use myLib from dev tools console</p>
+    <script>
+      console.log(
+        '\n         .--.',
+        '\n     .---|--|   .-.',
+        '\n  .--|===|  |---|_|--.',
+        '\n  |  |   |  |===| |~~|',
+        '\n  |  |   |  |===| |==|',
+        '\n  |  |   |  |   |_|__|',
+        '\n  |  |===|--|===| |~~|',
+        "\n  ^--^---'--^---^-^--^",
+        '\n  welcome to  __   _ __ ',
+        '\n  __ _  __ __/ /  (_) / ',
+        "\n /  ' \\/ // / /__/ / _ \\",
+        '\n/_/_/_/_,  /____/_/_.__/',
+        '\n      /___/   ',
+        '\n  '
+      );
+    </script>
   </body>
 </html>
