Clean and inline document code

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <!-- favicon -->
     <link rel="shortcut icon" href="./images/favicon.png" type="png" />
     <!-- scripts -->
-    <script defer src="./app.js"></script>
+    <script type="module" src="./main.js"></script>
+    <!-- styles -->
     <style>
       body {
         font-family: monospace;
@@ -31,6 +32,8 @@
     <h1>myLib</h1>
     <p><em>THE ODIN PROJECT</em></p>
     <p>inspect this page to use myLib from dev tools console</p>
+
+    <!-- console display -->
     <script>
       console.log(
         '\n         .--.',
@@ -48,6 +51,11 @@
         '\n      /___/   ',
         '\n  '
       );
+
+      console.log(
+        '\n   function list',
+        '\n      -',
+      )
     </script>
   </body>
 </html>
